Make SdchDictionaryFetcher free more memory when done.

It was just calling std::string::clear() on the string
it downloads dictionaries to when a fetch is complete, which
may not free the memory taken up by the string. As the fetcher
exists for the lifetime of the Profile, and this buffer can be
a couple hundred k, this can waste a fair bit of RAM.

BUG=620853

Review-Url: https://codereview.chromium.org/2075033003
Cr-Commit-Position: refs/heads/master@{#400464}

Former-commit-id: 3bbfea923d0edbbde05223076f969ac6a44ba234