net/url_request/sdch_dictionary_fetcher.cc
@@ -225,7 +225,7 @@ void SdchDictionaryFetcher::ResetRequest() {
   current_request_.reset();
   buffer_ = nullptr;
   current_callback_.Reset();
-  dictionary_.clear();
+  dictionary_.reset();
   return;
 }
 
@@ -286,6 +286,7 @@ int SdchDictionaryFetcher::DoSendRequest(int rv) {
   current_request_->SetLoadFlags(load_flags);
 
   buffer_ = new IOBuffer(kBufferSize);
+  dictionary_.reset(new std::string());
   current_callback_ = info.callback;
 
   current_request_->Start();
@@ -350,7 +351,7 @@ int SdchDictionaryFetcher::DoReadBodyComplete(int rv) {
 
   // Data; append to the dictionary and look for more data.
   if (rv > 0) {
-    dictionary_.append(buffer_->data(), rv);
+    dictionary_->append(buffer_->data(), rv);
     next_state_ = STATE_READ_BODY;
     return OK;
   }
@@ -365,7 +366,7 @@ int SdchDictionaryFetcher::DoCompleteRequest(int rv) {
 
   // If the dictionary was successfully fetched, add it to the manager.
   if (rv == OK) {
-    current_callback_.Run(dictionary_, current_request_->url(),
+    current_callback_.Run(*dictionary_, current_request_->url(),
                           current_request_->net_log(),
                           current_request_->was_cached());
   }
